--- a/wasabi/main.html
+++ b/wasabi/main.html
@@ -41,7 +41,7 @@
                         <ul>
                             <li><a href="main.html">Main</a></li>
                             <li><a href="rule.html">Rules</a></li>
-                            <iframe src="https://discordapp.com/widget?id=626050700383879198&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+                            <iframe src="https://discordapp.com/widget?id=626050700383879198&theme=dark" width="300" height="500" allowtransparency="true" frameborder="0"></iframe>
                         </ul>
 					</nav>
 
@@ -101,6 +101,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+            <script src="assets/js/mobile.js"></script>
 
 	</body>
 </html>
