--- a/download.html
+++ b/download.html
@@ -62,7 +62,7 @@
                                 </section>
 							<!-- Lists -->
 								<section>
-									<h1>#LIST</h1>
+									<h1>LIST</h1>
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
 											<h3>Available</h3>
