--- a/download.html
+++ b/download.html
@@ -57,7 +57,7 @@
 							<!-- Text -->
 								<section>
 									<p>KnMango 또는 Disboard 구성원이 자주 쓰는 소프트웨어나, 기타 잡다한 것들을 다운로드할 수 있습니다.</ br>
-                                       저작권 라이센스를 준수하므로 2차 배포는 하지 않습니다.</p>
+                                       저작권 라이센스를 준수하므로 2차 배포는 하지 않습니다.<del>하지만 불과 몇 줄 아래를 보면</del></p>
 									<hr />
                                 </section>
 							<!-- Lists -->
