--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 										<li><a href="#menu">Menu</a></li>
 									</ul>
 								</nav>
-
 						</div>
 					</header>
 
@@ -46,13 +45,6 @@
                             <li><a href="download.html">Download</a></li>
                             <li><a href="sourceshare.html">Source Share</a></li>
                             <li><a href="server.html">Server Stat(beta)</a></li>
-                            <div id="cp_widget_551abaf3-191d-425d-bfda-99c3b56e1eb5">...</div><script type="text/javascript">
-var cpo = []; cpo["_object"] ="cp_widget_551abaf3-191d-425d-bfda-99c3b56e1eb5"; cpo["_fid"] = "AMFAPmuLFlc2";
-var _cpmp = _cpmp || []; _cpmp.push(cpo);
-(function() { var cp = document.createElement("script"); cp.type = "text/javascript";
-cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
-var c = document.getElementsByTagName("script")[0];
-c.parentNode.insertBefore(cp, c); })(); </script><noscript><span>Doge's Test</span></noscript>
                         </ul>
 					</nav>
 
@@ -96,7 +88,7 @@ c.parentNode.insertBefore(cp, c); })(); </script><noscript><span>Doge's Test</sp
 										<h2>Devices</h2>
 										<div class="content">
 											<p>Galaxy Note 5<br />
-iPad Mini 2<br />
+                                            iPad Mini 2<br />
                                             MSI Laptop With - <br />
 											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />1TB HDD, Geforce GTX 970M)<br />
                                             Samsung Laptop With - <br />
@@ -145,8 +137,8 @@ iPad Mini 2<br />
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
+                    <footer id="footer">
+                        <div class="inner">
                             <section>
                                 <h2>Developer</h2>
                                 <ul>
@@ -154,18 +146,18 @@ iPad Mini 2<br />
                                     <li>Kong_White (Sub Developer)</li>
                                 </ul>
                             </section>
-							<section>
-								<h2>C O N T A C T</h2>
+                            <section>
+                                <h2>C O N T A C T</h2>
                                 <ul class="icons">
                                     <li><a href="tel:01039438196" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
                                     <li><a href="mailto:eunho0815@outlook.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
                                 </ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; KnMango. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+                            </section>
+                            <ul class="copyright">
+                                <li>&copy; KnMango. All rights reserved</li>
+                                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                            </ul>
+                    </footer>
 
 			</div>
 
