--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 ﻿<!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 <head>
     <title>DizBorD | Main</title>
@@ -173,6 +168,7 @@
                                 <li>&copy; KnMango. All rights reserved</li>
                                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                             </ul>
+                        </div>
                     </footer>
 
 			</div>
