--- a/server.html
+++ b/server.html
@@ -1,19 +1,32 @@
-<!doctype html>
+ï»¿<!doctype html>
 <html>
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body>
     <div>
         <h1>Server Check Page</h1>
         <p>
-            ´Ù¿î·Îµå ¼­¹ö, ¸¶ÀÎÅ©·¡ÇÁÆ® ¼­¹ö µîÀÇ »óÅÂ Ã¼Å©.<br />
-            WOL(Wake-Up On LAN)¿¡ »ç¿ëµÇ´Â ¸ÅÁ÷ÆÐÅ¶(<code>FF:FF:FF:FF:FF:FF</code>) Àü¼Û±â´É ±¸Çö ¿¬±¸ÁßÀÔ´Ï´Ù.
+            Magic Packet ì „ì†¡ íŽ˜ì´ì§€.<br />
+            WOL(Wake-Up On LAN) ì‚¬ìš©ì„ ìœ„í•œ Magic Packet(<code>FF:FF:FF:FF:FF:FF</code>) Destination MAC, IPë¥¼ ìž…ë ¥í•˜ì‹­ì‹œì˜¤.
         </p>
     </div>
     <div>
-        <h5>* Chromium ¿£Áø ±â¹ÝÀÇ ºê¶ó¿ìÀú°¡ ¾Æ´Ñ È¯°æ¿¡¼­´Â Á¤»ó ÀÛµ¿À» º¸ÀåÇÒ ¼ö ¾øÀ½.</h5>
+        <h5>* Chromium ê¸°ë°˜ ë¸Œë¼ìš°ì € ì™¸ì—ì„œëŠ” ì •ìƒ ìž‘ë™ì„ ë³´ìž¥í•  ìˆ˜ ì—†ìŒ.</h5>
     </div>
 </body>
 </html>
