--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a>
-										<h2>Why Github.io?</h2>
+										<h2>Tools</h2>
 										<div class="content">
-											<p>이 페이지는 Github Pages를 기반으로<br />호스트됩니다. <del>저예산 유저의 비애</del></p>
+											<p>Magic Packet 전송을 통한 WOL, <br/>Minecraft Server 호스트 등의 도구가 제공됩니다.</p>
 										</div>
 									
 									</a>
