--- a/scarchive.html
+++ b/scarchive.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col-6 col-12-medium">
             <h3>SANS!</h3>
-            <q>SANS!!!!!!!!!!!!!!!!!!!!!WAH!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</q>
+            <q><del>SANS!!!!!!!!!!!!!!!!!!!!!WAH!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</del></q>
         </div>
         <div class="col-6 col-12-medium">
             <h4>Menu</h4>
