--- a/wasabi/rule.html
+++ b/wasabi/rule.html
@@ -64,7 +64,8 @@
                                         3. 대화에 끼고싶은데 못 끼겠으면 방장이랑 부방장한테 꼭 말해주세요<br />
                                         4. 분쟁 발생 시, 본 방에서는 싸움 금지. 물 흐림 위험도 있고, 다른 분들도 불편하시니 따로 방을 파셔서 담판을 지어주세요.<br />
                                         5. 이유없는 들낙은 자제해주세요.(ex. 다툼, 단순 변심 등) 어그로, 물흐림 등의 문제를 불러올 수 있습니다.<br />
-                                           (들낙이란 채팅방에서 입장/퇴장을 최소 1회 이상 반복하는 것으로 함.)<br />
+                                           (들낙이란 채팅방에서 입장/퇴장을 72시간 내에 최소 1회 이상 반복하는 것으로 함.)<br />
+                                        
                                         와사비가 여러분에게 편하게 이런저런 이야기 막 할 수 있는 방이 되었으면 좋겠습니다!<br />
                                         
                                     </p>
