--- a/kr_univ-ab-test_counter.html
+++ b/kr_univ-ab-test_counter.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
 <html>
+<head>
+    <meta charset="utf-8" />
+    <title>2020 수능카운터</title>
+</head>
 <body>
     <h1>2020 수능까지</h1>
     <iframe src="jinh.kr/SAT_kr/page/SAT21.html" style="width:365px; height:88px; border:0;"></iframe>
