--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
     <title>DizBorD | Main</title>
@@ -62,10 +62,11 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>KnMango의 DizBorD에 오신 것을 환영합니다!<br /> </h1>
+                            <header>
+                                <h1>KnMango의 DizBorD에 오신 것을 환영합니다!</h1><br />
+                                <iframe src="https://jinh.kr/SAT_kr/page/SAT21.html" style="width:365px; height:88px; border:0;"></iframe><br /><del>공부해!!!!!</del><br /><br /><br />
                                 <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChating Profile</a>.</p>
-							</header>
+                            </header>
 							<section class="tiles">
 								<article class="style2">
 									<span class="image">
