--- a/kr_univ-ab-test_counter.html
+++ b/kr_univ-ab-test_counter.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>2020 ╪Ж╢ид╚©Нем</title>
+    <title>2020 Л┬≤К┼╔Л╧╢Л ╢М└╟</title>
 </head>
 <body>
-    <h1>2020 ╪Ж╢и╠НаЖ</h1>
-    <iframe src="jinh.kr/SAT_kr/page/SAT21.html" style="width:365px; height:88px; border:0;"></iframe>
-    <p>╟Ь╨нго╩У©Д!!!! ╓╩╓╩╓╩╓╩╓╩╓╩╓╩</p>
+    <h1>2020 Л┬≤К┼╔Й╧▄Л╖─</h1>
+    <iframe src="https://jinh.kr/SAT_kr/page/SAT21.html" style="width:365px; height:88px; border:0;"></iframe>
+    <p>ЙЁ╣К╤─М∙≤Л┐┬Л ■!!!! Ц┘▀Ц┘▀Ц┘▀Ц┘▀Ц┘▀Ц┘▀Ц┘▀</p>
 </body>
 </html>
