--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 									<a>
 										<h2>Devices</h2>
 										<div class="content">
-											<p>Galaxy Note 5<br />
+											<p>iPhone 6S<br />Galaxy Note 5<br />
                                             iPad Mini 2<br />
                                             MSI Laptop With - <br />
 											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />1TB HDD, Geforce GTX 970M)<br />
