--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 						<div class="inner">
                             <header>
                                 <h1>KnMango의 DizBorD에 오신 것을 환영합니다!</h1><br />
-                                <iframe src="https://jinh.kr/SAT_kr/page/SAT21.html" style="width:365px; height:88px; border:0;"></iframe><br /><del>공부해!!!!!</del><br /><br /><br />
                                 <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChating Profile</a>.</p>
                             </header>
 							<section class="tiles">
@@ -99,10 +98,11 @@
 									<a>
 										<h2>Devices</h2>
 										<div class="content">
-											<p>Galaxy Note 5<br />
+											<p>iPhone 6S<br />	
+											Galaxy Note 5<br />
                                             iPad Mini 2<br />
                                             MSI Laptop With - <br />
-											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />1TB HDD, Geforce GTX 970M)<br />
+											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />4TB HDD, Geforce GTX 970M)<br />
                                             Samsung Laptop With - <br />
                                             (i5-5200U, 4GB Ram, 128GB SSD)</p>
 										</div>
@@ -128,7 +128,8 @@
 									<a>
 										<h2>Server</h2>
 										<div class="content">
-											<p>곧 자체 서버 테스트를 할 예정입니다.</p>
+											<p>곧 자체 서버 테스트를 할 예정입니다.<br />
+											<del>아톰에서 제온으로 업글하고십다..</del></p>
 										</div>
 									</a>
 								</article>
@@ -139,7 +140,7 @@
 									<a>
 										<h2>Tools</h2>
 										<div class="content">
-											<p>Magic Packet 전송을 통한 WOL, <br/>Minecraft Server 호스트 등의 도구가 제공됩니다.</p>
+											<p>Magic Packet 전송을 통한 WOL, <br/>Minecraft Server 호스트 등의 도구가<br />제공될 예정입니다.</p>
 										</div>
 									
 									</a>
