--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
 									<a>
 										<h2>Server</h2>
 										<div class="content">
-											<p>곧 자체 서버 테스트를 할 예정입니다.<br />
-											<del>아톰에서 제온으로 업글하고십다..</del></p>
+											<p>곧 자체 서버 테스트를 할 예정입니다.</p>
 										</div>
 									</a>
 								</article>
