--- a/index.html
+++ b/index.html
@@ -98,13 +98,16 @@
 									<a>
 										<h2>Devices</h2>
 										<div class="content">
-											<p>iPhone 6S<br />	
-											Galaxy Note 5<br />
-                                            iPad Mini 2<br />
-                                            MSI Laptop With - <br />
-											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />4TB HDD, Geforce GTX 970M)<br />
+											<p>MSI Laptop With - <br />
+											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />
+											4TB HDD, Geforce GTX 970M)<br />
+											- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -<br />
                                             Samsung Laptop With - <br />
-                                            (i5-5200U, 4GB Ram, 128GB SSD)</p>
+                                            (i5-5200U, 4GB Ram, 128GB SSD)<br />
+											- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -<br />
+											Macbook Pro 16'' 2019 With - <br />
+											(i9-9800H, 16GB RAM, 1TB SSD,<br />
+											Radeon Pro 5500M)</p>
 										</div>
 									</a>
 								</article>
@@ -112,12 +115,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="download.html">
-										<h2>Download Page?</h2>
+									<a href="https://undertale.com/">
+										<h2>Undertale</h2>
 										<div class="content">
-											<p>다운로드 링크를 모아놓은 페이지를 <br />
-                                            제공합니다...만은 일부 접근 불가능한<br />
-                                            페이지도 존재합니다.</p>
+											<p>와샌즈파피루스언더테일아시는구나</p>
 										</div>
 									</a>
 								</article>
