--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 									<a>
 										<h2>Devices</h2>
 										<div class="content">
-											<p>MSI Laptop With - <br />
+											<p>MSI Laptop<br />
 											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />
 											4TB HDD, Geforce GTX 970M)<br />
 											- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -<br />
-                                            Samsung Laptop With - <br />
+                                            Samsung Laptop<br />
                                             (i5-5200U, 4GB Ram, 128GB SSD)<br />
 											- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -<br />
-											Macbook Pro 16'' 2019 With - <br />
+											Macbook Pro 16'' 2019<br />
 											(i9-9800H, 16GB RAM, 1TB SSD,<br />
 											Radeon Pro 5500M)</p>
 										</div>
