--- a/index.html
+++ b/index.html
@@ -103,11 +103,7 @@
 											4TB HDD, Geforce GTX 970M)<br />
 											- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -<br />
                                             Samsung Laptop<br />
-                                            (i5-5200U, 4GB Ram, 128GB SSD)<br />
-											- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -<br />
-											Macbook Pro 16'' 2019<br />
-											(i9-9800H, 16GB RAM, 1TB SSD,<br />
-											Radeon Pro 5500M)</p>
+                                            (i5-5200U, 4GB Ram, 128GB SSD)<br /></p>
 										</div>
 									</a>
 								</article>
@@ -138,9 +134,11 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a>
-										<h2>Tools</h2>
+										<h2>Workspace</h2>
 										<div class="content">
-											<p>Magic Packet 전송을 통한 WOL, <br/>Minecraft Server 호스트 등의 도구가<br />제공될 예정입니다.</p>
+											<p>Macbook Pro 16'' 2019<br />
+											(i9-9900H, 16GB RAM, 1TB SSD,<br />
+											Radeon Pro 5500M)</p>
 										</div>
 									
 									</a>
