--- a/index.html
+++ b/index.html
@@ -100,10 +100,7 @@
 										<div class="content">
 											<p>MSI Laptop<br />
 											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />
-											4TB HDD, Geforce GTX 970M)<br />
-											- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -<br />
-                                            Samsung Laptop<br />
-                                            (i5-5200U, 4GB Ram, 128GB SSD)<br /></p>
+											4TB HDD, Geforce GTX 970M)<br /></p>
 										</div>
 									</a>
 								</article>
