--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a>
-										<h2>Devices</h2>
+										<h2>Sound Devices</h2>
 										<div class="content">
-											<p>MSI Laptop<br />
-											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />
-											4TB HDD, Geforce GTX 970M)<br /></p>
+											<p>Steinberg UR12<br />
+											ATH-M50X
 										</div>
 									</a>
 								</article>
@@ -135,7 +134,10 @@
 										<div class="content">
 											<p>Macbook Pro 16'' 2019<br />
 											(i9-9900H, 16GB RAM, 1TB SSD,<br />
-											Radeon Pro 5500M)</p>
+											Radeon Pro 5500M)<br />
+											MSI Laptop<br />
+											(i7-4720HQ, 12GB RAM, 1TB HHD,<br />
+											2x 128GB SSD, GTX 970M)</p>
 										</div>
 									
 									</a>
