--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a>
-										<h2>Sound Devices</h2>
+										<h2>Goh-Sam</h2>
 										<div class="content">
-											<p>Steinberg UR12<br />
-											ATH-M50X
+											<p>그렇습니다... 사실 고3입니다.<br />
+											<del>졸업마렵다</del></p>
 										</div>
 									</a>
 								</article>
