--- a/download.html
+++ b/download.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <!--
 	Phantom by HTML5 UP
 	html5up.net | @ajlkn
@@ -87,6 +87,7 @@
                                                 <li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">러브라이브! 시리즈 음원 아카이브</a></li>
                                                 <li><a href="https://drive.google.com/open?id=16PVZ08TFavxzunV_kiLPsehvfw40DxPE">러브라이브! 영상 아카이브</a></li>
                                                 <li><a href="https://drive.google.com/open?id=16te0VV7Et_mBdNl3LQSrFVFmVR54NMDa">러브라이브! 선샤인! 영상 아카이브</a></li>
+												<li><a href="https://drive.google.com/drive/folders/1q2AngZhT2vh8VLCPp7eCqIm9pfhNXGVN?usp=sharing">스트라이크 더 블러드 NCOP/ED</a></li>
                                             </ul>
                                             <h3>Archive - Private</h3>
                                             <ul class="alt">
