Site Description Fixed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>DizBorD | Main</title>
 	<meta charset="utf-8" />
+	<meta name="description" content="DizBorD는 샌즈를 신격화하여 받드는 곳이다..ㄹㅇㅋㅋ">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
