--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <!--
 	Phantom by HTML5 UP
 	html5up.net | @ajlkn
@@ -69,7 +69,8 @@
 							<h1>#About Blog Owner</h1>
                             <h2>KnMango* - Minkyo Choi</h2>
 							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
-							<p>평범한 고등학교 2학년생입니다. IT관련, 음악, 음향, 전자기기를 좋아합니다.</p><br />
+							<p><del>평범한 고등학교 2학년생입니다. IT관련, 음악, 음향, 전자기기를 좋아합니다.</del><br />
+								이젠 3학년생입니다.</p><br />
 						</div>
 					</div>
 
