--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="aboutme.html">
-										<h2>The Peaceful DISBOARD</h2>
+										<h2>Owner</h2>
 										<div class="content">
-											<p><del>소속 비스무리한거..?</del><br />클릭 시 About Me 페이지로 이동합니다.</p>
+											<p>주인장의 신상을 털고싶으시다면?<br />클릭 시 About Me 페이지로 이동합니다.</p>
 										</div>
 									</a>
 								</article>
