index dscrption fxd

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 						<div class="inner">
                             <header>
                                 <h1>KnMango의 DizBorD에 오신 것을 환영합니다!</h1><br />
-                                <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChating Profile</a>.</p>
+                                <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChating Profile<br />
+								<del>사실 사이트도 미완성</del></a>.</p>
                             </header>
 							<section class="tiles">
 								<article class="style2">
