Ah Sibal Ppak Chin Da

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <header>
                                 <h1>KnMango의 DizBorD에 오신 것을 환영합니다!</h1><br />
                                 <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChating Profile.</a><br />
-								<del>사실 사이트도 미완성인데 아 ㅋㅋ</del></p>
+								<del>사실 사이트라 하기엔 아직 미완성인데</del></p>
                             </header>
 							<section class="tiles">
 								<article class="style2">
