--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									<a>
 										<h2>Server</h2>
 										<div class="content">
-											<p>곧 자체 서버 테스트를 할 예정입니다.</p>
+											<p>FTP서버, L2TP VPN 서버 운영 중입니다.</p>
 										</div>
 									</a>
 								</article>
