--- a/butter-server/index.html
+++ b/butter-server/index.html
@@ -33,7 +33,7 @@
 
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="#" class="image fit"><img src="images/pic01.png" alt="" /></a>
+				<a class="image fit"><img src="images/pic01.png" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h3>보다 아름다운 건축물<br />
@@ -45,7 +45,7 @@
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
-				<a href="#" class="image fit"><img src="images/pic02.png" alt="" /></a>
+				<a class="image fit"><img src="images/pic02.png" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h3>풍부한 먹거리<br />
