Main Page, ButterSV index bg, tips fx

--- a/butter-server/index.html
+++ b/butter-server/index.html
@@ -10,84 +10,111 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<section id="header">
-				<header>
-					<h1>ButterCraft Server</h1>
-					<p>A Minecraft Server with Butter Factory</p>
-				</header>
-				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">대충 소개</a>
-				</footer>
-			</section>
-
-		<!-- Banner -->
-			<section id="banner">
-				<header>
-					<h2>영혼노동이 질린다면?</h2>
-				</header>
-				<p>이 마인크래프트 서버는 무료로 해줍니다! Forge와 몇 가지 모드만 설치하면 바로 플레이가 가능합니다.</p>
-				<footer>
-					<a href="#first" class="button style2 scrolly">모드 소개</a>
-				</footer>
-			</section>
-
-		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
-				<a class="image fit"><img src="images/pic01.png" alt="" /></a>
-				<div class="inner">
-					<header>
-						<h3>보다 아름다운 건축물<br />
-						> Builderscraft</h3>
-					</header>
-					<p>Vanilla 마인크래프트보다 더욱<br />우수한 심미성의 건축 작업이<br />Builderscraft를 사용하여 가능합니다.</p>
-				</div>
-			</article>
-
-		<!-- Feature 2 -->
-			<article class="container box style1 left">
-				<a class="image fit"><img src="images/pic02.png" alt="" /></a>
-				<div class="inner">
-					<header>
-						<h3>풍부한 먹거리<br />
-						> Pam's HarvestCraft 2<br />
-						> Aquaculture</h3>
-					</header>
-					<p>간단하게 즐길 수 있는 낚시와 다양한 요리가 가능합니다.</p>
-				</div>
-			</article>
-
-		<!-- Portfolio -->
-			<article class="container box style2">
-				<header>
-					<h2>최대한 간소화된 모드 구성</h2>
-					<p>컴퓨터에 무리가 가지 않는 선에서<br />최대한 만족도가 높은 모드들로 구성하였습니다.</p>
-				</header>
-			</article>
-
-		<!-- Contact -->
-			<article class="container box style3">
-				<header>
-					<h2>관심이 생겼다면?</h2>
-					<p><br /><a href="https://docs.google.com/spreadsheets/d/1QEgLy3t4kMzk9ztyC_E5eaL1k-kxiyIsAtP3MCJNIEc/edit?usp=sharing">서버 안내 스프레드시트(링크)</a><br />
-						<a href="https://mcsrvstat.us/server/104.14.74.169:25565">서버 상태 확인하기</a>
-				</header>
-			</article>	
-		<section id="footer">
-			<div class="copyright">
-				<ul class="menu">
-					<li>&copy; OverRapid(Minkyo Choi). All rights reserved.</li><li>Template Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
+		<section id="header">
+			<header>
+				<h1>ButterCraft Server</h1>
+				<p>A Minecraft Server with Butter Factory</p>
+			</header>
+			<footer>
+				<a href="#banner" class="button style2 scrolly-middle">대충 소개</a>
+			</footer>
 		</section>
 
+		<!-- Banner -->
+		<section id="banner">
+			<header>
+				<h2>영혼노동이 질린다면?</h2>
+			</header>
+			<p>이 마인크래프트 서버는 무료로 해줍니다! Forge와 몇 가지 모드만 설치하면 바로 플레이가 가능합니다.</p>
+			<footer>
+				<a href="#first" class="button style2 scrolly">모드 소개</a>
+			</footer>
+		</section>
+
+		<!-- Feature 1 -->
+		<article id="first" class="container box style1 right">
+			<a class="image fit"><img src="images/pic01.png" alt="" /></a>
+			<div class="inner">
+				<header>
+					<h3>
+						보다 아름다운 건축물<br />
+						> Builderscraft
+					</h3>
+				</header>
+				<p>Vanilla 마인크래프트보다 더욱<br />우수한 심미성의 건축 작업이<br />Builderscraft를 사용하여 가능합니다.</p>
+			</div>
+		</article>
+
+		<!-- Feature 2 -->
+		<article class="container box style1 left">
+			<a class="image fit"><img src="images/pic02.png" alt="" /></a>
+			<div class="inner">
+				<header>
+					<h3>
+						풍부한 먹거리<br />
+						> Pam's HarvestCraft 2<br />
+						> Aquaculture
+					</h3>
+				</header>
+				<p>간단하게 즐길 수 있는 낚시와 다양한 요리가 가능합니다.</p>
+			</div>
+		</article>
+
+		<!-- Feature 3 -->
+		<article class="container box style1 right">
+			<a class="image fit"><img src="images/pic02.png" alt="" /></a>
+			<div class="inner">
+				<header>
+					<h3>
+						아이템 활용 도우미<br />
+						> Just Enough Items (JEI)
+					</h3>
+				</header>
+				<p>마인크래프트에 존재하는 수많은<br />
+				조합법 및 활용법을 JEI를 통해 손쉽게<br />
+				알 수 있습니다.<sup>1</sup></p>
+			</div>
+		</article>
+
+		<!-- Portfolio -->
+		<article class="container box style2">
+			<header>
+				<h2>최대한 간소화된 모드 구성</h2>
+				<p>컴퓨터에 무리가 가지 않는 선에서<br />최대한 만족도가 높은 모드들로 구성하였습니다.<sup>2</sup></p>
+			</header>
+		</article>	
+
+		<!-- Contact -->
+		<article class="container box style3">
+			<header>
+				<h2>관심이 생겼다면?</h2>
+				<p>
+					<br /><a href="https://docs.google.com/spreadsheets/d/1QEgLy3t4kMzk9ztyC_E5eaL1k-kxiyIsAtP3MCJNIEc/edit?usp=sharing">서버 안내 스프레드시트(링크)</a><br />
+					<a href="https://mcsrvstat.us/server/104.14.74.169:25565">서버 상태 확인하기</a>
+				</p>
+			</header>
+		</article>
+		<section id="footer">
+			<p>
+				<span style="font-size:small"><sup>1)</sup> 모드에서 추가된 블럭, 아이템 포함</span><br />
+				<span style="font-size:small"><sup>2)</sup> 개인 쉐이더, 한글패치 등 추가 설치 가능</span>
+			</p>
+			<div class="copyright">
+				<ul class="menu">
+					<li>&copy; OverRapid(Minkyo Choi). All rights reserved.</li>
+					<li>Template Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
+		</section>	
+
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/jquery.poptrox.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
