--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<del>사실 사이트라 하기엔 아직 미완성인데</del></p>
                             </header>
 							<section class="tiles">
-								<article class="style2">
+								<article class="style2">	
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
@@ -124,7 +124,7 @@
 									<a>
 										<h2>Server</h2>
 										<div class="content">
-											<p>FTP서버, L2TP VPN 서버 운영 중입니다.</p>
+											<p>FTP서버, L2TP (일본, 한국)<>VPN 서버 운영 중입니다.</p>
 										</div>
 									</a>
 								</article>
