--- a/butter-server/index.html
+++ b/butter-server/index.html
@@ -13,7 +13,7 @@
 		<section id="header">
 			<header>
 				<h1>ButterCraft Server</h1>
-				<p>A Minecraft Server with Butter Factory</p>
+				<p>A Minecraft Server of Butter Factory</p>
 			</header>
 			<footer>
 				<a href="#banner" class="button style2 scrolly-middle">대충 소개</a>
@@ -62,7 +62,7 @@
 
 		<!-- Feature 3 -->
 		<article class="container box style1 right">
-			<a class="image fit"><img src="images/pic02.png" alt="" /></a>
+			<a class="image fit"><img src="images/pic03.png" alt="" /></a>
 			<div class="inner">
 				<header>
 					<h3>
