Buttercraft index Updated

--- a/butter-server/index.html
+++ b/butter-server/index.html
@@ -96,8 +96,9 @@
 		</article>
 		<section id="footer">
 			<p>
-				<span style="font-size:small"><sup>1)</sup> 모드에서 추가된 블럭, 아이템 포함</span><br />
-				<span style="font-size:small"><sup>2)</sup> 개인 쉐이더, 한글패치 등 추가 설치 가능</span>
+				<span style="font-size:small"><sup>1)</sup> 모드에서 추가된 블럭, 아이템 포함.</span><br />
+				<span style="font-size:small"><sup>2)</sup> 개인 쉐이더, 한글패치 등 추가 설치 가능.</span><br />
+				<span style="font-size:small">주의: ONLINE-MODE 사용 중이므로, 정품 소프트웨어 사용자만 접속 가능.</span>
 			</p>
 			<div class="copyright">
 				<ul class="menu">
