--- a/ha_seolha/index.html
+++ b/ha_seolha/index.html
@@ -1,12 +1,108 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8">
+    <title>설하조아</title>
+    <script src="slideshow.js" type="text/javascript" charset="utf-8"></script>
+    <meta name="description" content="Stalin Unibell">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" type="text/css" href="slideshow.css" />
+    <link rel="stylesheet" href="main.css" />
+    <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+</head>
+
+<!-- Header -->
+<header id="header">
+    <div class="inner">
+
+        <!-- Logo -->
+        <a href="index.html" class="logo">
+            <span class="title">* Seolha_zoa</span>
+        </a>
+
+        <!-- Nav -->
+        <nav>
+            <ul>
+                <li><a href="#menu">Menu</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<!-- Menu -->
+<nav id="menu">
+    <h2>MENU</h2>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="https://hanime.tv">hanime</a></li>
+        <li><a href="https://hitomi.la">hitomi</a></li>
+        <li><a href="https://www.xvideos.com">xvideos</a></li>
+        <li><a href="https://www.pornhub.com">pornhub</a></li>
+    </ul>
+</nav>
+
 <body>
-    <h1>Test Dummy Page / h1 제목</h1>
-    <a>
-        하등한 인간들이 오를 수 없는 경지의 절대적 지배자<br />
-        설하와 버터공장을 이끄는 무적의 철혈리더<br />
-        하늘이 무섭지 않은 이유는 그가 곧 하늘이며 정의이며 진리이기에.<br />
-        / 본문
-    </a>
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 6</div>
+            <img src="./seolhazoa/BFact1.png" style="width:100%">
+            <div class="text">knmango</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 6</div>
+            <img src="./seolhazoa/BFact2.png" style="width:100%">
+            <div class="text">knmango</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 6</div>
+            <img src="./seolhazoa/BFact3.png" style="width:100%">
+            <div class="text">knmango</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">4 / 6</div>
+            <img src="./seolhazoa/BFact4.png" style="width:100%">
+            <div class="text">knmango</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">5 / 6</div>
+            <img src="./seolhazoa/BFact5.png" style="width:100%">
+            <div class="text">knmango</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">6 / 6</div>
+            <img src="./seolhazoa/BFact6.png" style="width:100%">
+            <div class="text">knmango</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="moveSlides(-1)">&#10094;</a>
+        <a class="next" onclick="moveSlides(1)">&#10095;</a>
+    </div>
+    <br />
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(0)"></span>
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+    </div>
 </body>
-</html>
+
+<!-- Scripts -->
+<script src="jquery.min.js"></script>
+<script src="browser.min.js"></script>
+<script src="breakpoints.min.js"></script>
+<script src="util.js"></script>
+<script src="main.js"></script>
+
+</html> 
