--- a/ha_seolha/index.html
+++ b/ha_seolha/index.html
@@ -5,10 +5,8 @@
     <title>설하조아</title>
     <script src="slideshow.js" type="text/javascript" charset="utf-8"></script>
     <meta name="description" content="Stalin Unibell">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="slideshow.css" />
     <link rel="stylesheet" href="main.css" />
-    <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
 </head>
 
 <!-- Header -->
@@ -20,28 +18,8 @@
             <span class="title">* Seolha_zoa</span>
         </a>
 
-        <!-- Nav -->
-        <nav>
-            <ul>
-                <li><a href="#menu">Menu</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-<!-- Menu -->
-<nav id="menu">
-    <h2>MENU</h2>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="https://hanime.tv">hanime</a></li>
-        <li><a href="https://hitomi.la">hitomi</a></li>
-        <li><a href="https://www.xvideos.com">xvideos</a></li>
-        <li><a href="https://www.pornhub.com">pornhub</a></li>
-    </ul>
-</nav>
-
 <body>
+    <div style="width:1600px" align="center">
     <div class="slideshow-container">
 
         <!-- Full-width images with number and caption text -->
@@ -51,58 +29,54 @@
             <div class="text">knmango</div>
         </div>
 
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 6</div>
-            <img src="./seolhazoa/BFact2.png" style="width:100%">
-            <div class="text">knmango</div>
+         <div class="mySlides fade">
+             <div class="numbertext">2 / 6</div>
+                <img src="./seolhazoa/BFact2.png" style="width:100%">
+                <div class="text">knmango</div>
+         </div>
+
+           <div class="mySlides fade">
+                <div class="numbertext">3 / 6</div>
+                <img src="./seolhazoa/BFact3.png" style="width:100%">
+                <div class="text">knmango</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 6</div>
+                <img src="./seolhazoa/BFact4.png" style="width:100%">
+                <div class="text">knmango</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">5 / 6</div>
+                <img src="./seolhazoa/BFact5.png" style="width:100%">
+                <div class="text">knmango</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">6 / 6</div>
+                <img src="./seolhazoa/BFact6.png" style="width:100%">
+                <div class="text">knmango</div>
+            </div>
+
+         <!-- Next and previous buttons -->
+         <a class="prev" onclick="moveSlides(-1)">&#10094;</a>
+            <a class="next" onclick="moveSlides(1)">&#10095;</a>
+     </div>
+        <br />
+
+     <!-- The dots/circles -->
+     <div style="text-align:center">
+         <span class="dot" onclick="currentSlide(0)"></span>
+          <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
         </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 6</div>
-            <img src="./seolhazoa/BFact3.png" style="width:100%">
-            <div class="text">knmango</div>
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">4 / 6</div>
-            <img src="./seolhazoa/BFact4.png" style="width:100%">
-            <div class="text">knmango</div>
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">5 / 6</div>
-            <img src="./seolhazoa/BFact5.png" style="width:100%">
-            <div class="text">knmango</div>
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">6 / 6</div>
-            <img src="./seolhazoa/BFact6.png" style="width:100%">
-            <div class="text">knmango</div>
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="moveSlides(-1)">&#10094;</a>
-        <a class="next" onclick="moveSlides(1)">&#10095;</a>
-    </div>
-    <br />
-
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(0)"></span>
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>
-        <span class="dot" onclick="currentSlide(5)"></span>
     </div>
 </body>
 
 <!-- Scripts -->
-<script src="jquery.min.js"></script>
-<script src="browser.min.js"></script>
-<script src="breakpoints.min.js"></script>
-<script src="util.js"></script>
-<script src="main.js"></script>
 
 </html> 
