--- a/ha_seolha/index.html
+++ b/ha_seolha/index.html
@@ -18,65 +18,66 @@
             <span class="title">* Seolha_zoa</span>
         </a>
 
-<body>
-    <div style="width:1600px" align="center">
-    <div class="slideshow-container">
+        <body>
+            <div style="width:1600px" align="center">
+                <div class="slideshow-container">
 
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 6</div>
-            <img src="./seolhazoa/BFact1.png" style="width:100%">
-            <div class="text">knmango</div>
-        </div>
+                    <!-- Full-width images with number and caption text -->
+                    <div class="mySlides fade">
+                        <div class="numbertext">1 / 6</div>
+                        <img src="./seolhazoa/BFact1.png" style="width:100%">
+                        <div class="text">knmango</div>
+                    </div>
 
-         <div class="mySlides fade">
-             <div class="numbertext">2 / 6</div>
-                <img src="./seolhazoa/BFact2.png" style="width:100%">
-                <div class="text">knmango</div>
-         </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">2 / 6</div>
+                        <img src="./seolhazoa/BFact2.png" style="width:100%">
+                        <div class="text">knmango</div>
+                    </div>
 
-           <div class="mySlides fade">
-                <div class="numbertext">3 / 6</div>
-                <img src="./seolhazoa/BFact3.png" style="width:100%">
-                <div class="text">knmango</div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">3 / 6</div>
+                        <img src="./seolhazoa/BFact3.png" style="width:100%">
+                        <div class="text">knmango</div>
+                    </div>
+
+                    <div class="mySlides fade">
+                        <div class="numbertext">4 / 6</div>
+                        <img src="./seolhazoa/BFact4.png" style="width:100%">
+                        <div class="text">knmango</div>
+                    </div>
+
+                    <div class="mySlides fade">
+                        <div class="numbertext">5 / 6</div>
+                        <img src="./seolhazoa/BFact5.png" style="width:100%">
+                        <div class="text">knmango</div>
+                    </div>
+
+                    <div class="mySlides fade">
+                        <div class="numbertext">6 / 6</div>
+                        <img src="./seolhazoa/BFact6.png" style="width:100%">
+                        <div class="text">knmango</div>
+                    </div>
+
+                    <!-- Next and previous buttons -->
+                    <a class="prev" onclick="moveSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="moveSlides(1)">&#10095;</a>
+                </div>
+                <br />
+
+                <!-- The dots/circles -->
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(0)"></span>
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                    <span class="dot" onclick="currentSlide(5)"></span>
+                </div>
             </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">4 / 6</div>
-                <img src="./seolhazoa/BFact4.png" style="width:100%">
-                <div class="text">knmango</div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">5 / 6</div>
-                <img src="./seolhazoa/BFact5.png" style="width:100%">
-                <div class="text">knmango</div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">6 / 6</div>
-                <img src="./seolhazoa/BFact6.png" style="width:100%">
-                <div class="text">knmango</div>
-            </div>
-
-         <!-- Next and previous buttons -->
-         <a class="prev" onclick="moveSlides(-1)">&#10094;</a>
-            <a class="next" onclick="moveSlides(1)">&#10095;</a>
-     </div>
-        <br />
-
-     <!-- The dots/circles -->
-     <div style="text-align:center">
-         <span class="dot" onclick="currentSlide(0)"></span>
-          <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
-            <span class="dot" onclick="currentSlide(5)"></span>
-        </div>
-    </div>
-</body>
-
-<!-- Scripts -->
+            <p>Korean Players, mobile interactive page 원해요? 하지만 knmango 매우 귀찮다! 꼬우면 사용하라. 당신의 멋진 Tablet PC 또는 Desktop.
+        </body>
+        하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 !
+        <!-- Scripts -->
 
 </html> 
