--- a/ha_seolha/index.html
+++ b/ha_seolha/index.html
@@ -74,10 +74,10 @@
                     <span class="dot" onclick="currentSlide(4)"></span>
                     <span class="dot" onclick="currentSlide(5)"></span>
                 </div>
-            </div>
+            </div> <br />
             <p>Korean Players, mobile interactive page 원해요? 하지만 knmango 매우 귀찮다! 꼬우면 사용하라. 당신의 멋진 Tablet PC 또는 Desktop.
-        </body>
-        하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 !
+        </body><br />
+               <span style="font-size:small">하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! 하설하 ! </span>
         <!-- Scripts -->
 
 </html> 
