--- a/ha_seolha/index.html
+++ b/ha_seolha/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>설하조아</title>
+    <title>설하조아 | 컬렉션</title>
+    <meta name="description" content="설하조아">
     <script src="slideshow.js" type="text/javascript" charset="utf-8"></script>
     <meta name="description" content="Stalin Unibell">
     <link rel="stylesheet" type="text/css" href="slideshow.css" />
