Google Analytics SCR ADDED

--- a/ha_seolha/index.html
+++ b/ha_seolha/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Stalin Unibell">
     <link rel="stylesheet" type="text/css" href="slideshow.css" />
     <link rel="stylesheet" href="main.css" />
+    <script src="analytics.js" charset="utf-8"></script>
 </head>
 
 <!-- Header -->
