--- a/ha_seolha/index.html
+++ b/ha_seolha/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="설하조아">
     <script src="slideshow.js" type="text/javascript" charset="utf-8"></script>
     <meta name="description" content="Stalin Unibell">
+    <meta name="google-site-verification" content="q7MI_ZKkJzd_J7a5_DykXd7eNRb1xt7hHglMLOz2cIM" />
     <link rel="stylesheet" type="text/css" href="slideshow.css" />
     <link rel="stylesheet" href="main.css" />
     <script src="analytics.js" charset="utf-8"></script>
