설하조아 description apply

--- a/ha_seolha/index.html
+++ b/ha_seolha/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>설하조아 | 컬렉션</title>
-    <meta name="description" content="설하조아">
+    <meta name="description" content="킹갓제너럴머제스티충무공킹갓장">
     <script src="slideshow.js" type="text/javascript" charset="utf-8"></script>
-    <meta name="description" content="Stalin Unibell">
     <meta name="google-site-verification" content="q7MI_ZKkJzd_J7a5_DykXd7eNRb1xt7hHglMLOz2cIM" />
     <link rel="stylesheet" type="text/css" href="slideshow.css" />
     <link rel="stylesheet" href="main.css" />
