--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script data-ad-client="ca-pub-3776759331501824" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 	</body>
 </html>
