--- a/index.html
+++ b/index.html
@@ -135,12 +135,8 @@
 									<a>
 										<h2>Workspace</h2>
 										<div class="content">
-											<p>Macbook Pro 16'' 2019<br />
-											(i9-9900H, 16GB RAM, 1TB SSD,<br />
-											Radeon Pro 5500M)<br />
-											MSI Laptop<br />
-											(i7-4720HQ, 12GB RAM, 1TB HHD,<br />
-											2x 128GB SSD, GTX 970M)</p>
+											<p>Macbook Pro 13'' 2020<br />
+											(Apple Silicon M1)</p>
 										</div>
 									
 									</a>
