--- a/AIDORU.html
+++ b/AIDORU.html
@@ -25,6 +25,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="shortcut icon" href="choco.ico">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <meta name="google-site-verification" content="q7MI_ZKkJzd_J7a5_DykXd7eNRb1xt7hHglMLOz2cIM" />
 </head>
 	<body class="is-preload">
         
