--- a/AIDORU/index.html
+++ b/AIDORU/index.html
@@ -38,7 +38,7 @@
 
 							<!-- Logo -->
 								<a href="https://undertale.com" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">AIDORU</span>
+									<span class="symbol"></span><span class="title">AIDORU</span>
 								</a>
 
 							<!-- Nav -->
