--- a/AIDORU/index.html
+++ b/AIDORU/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Introduction | AIDORU</title>
+    <title>Soulworker | AIDORU</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -84,10 +84,10 @@
                                 </ul>
 							</section>
 							<section>
-								<h2>C O N T A C T</h2>
+								<h2>검 색 유 도</h2>
                                 <ul class="icons">
-                                    <li><a href="" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-                                    <li><a href="" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+                                    <li><a href="" class="icon style2 fa-phone"><span class="label">소울워커 아이도루</span></a></li>
+                                    <li><a href="" class="icon style2 fa-envelope-o"><span class="label">소울워커 아이도루</span></a></li>
                                 </ul>
 							</section>
 							<ul class="copyright">
