--- a/AIDORU/index.html
+++ b/AIDORU/index.html
@@ -48,7 +48,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<p>소울워커 최고의 아웃풋, 밍나노 아이도루 엄살쿤 보유 리그 AIDORU</p></hr>
+							<p>소울워커 최고의 아웃풋, 밍나노 아이도루 엄살쿤e 보유 리그 AIDORU</p></hr>
 							<h1>#Link</h1>
                             <h2>Discord</h2>
 							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
@@ -73,8 +73,8 @@
 							<section>
 								<h2>검 색 유 도</h2>
                                 <ul class="icons">
-                                    <li><a href="" class="icon style2 fa-phone"><span class="label">소울워커 아이도루</span></a></li>
-                                    <li><a href="" class="icon style2 fa-envelope-o"><span class="label">소울워커 아이도루</span></a></li>
+                                    <li><a href="" class="icon style2 fa-phone"><span class="label">소울워커 AIDORU</span></a></li>
+                                    <li><a href="" class="icon style2 fa-envelope-o"><span class="label">소울워커 AIDORU</span></a></li>
                                 </ul>
 							</section>
 							<ul class="copyright">
