--- a/AIDORU/index.html
+++ b/AIDORU/index.html
@@ -48,7 +48,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<p>소울워커 최고의 아웃풋, 밍나노 아이도루 엄살쿤e 보유 리그 AIDORU</p></hr>
+							<p>소울워커 최고의 아웃풋, 밍나노 아이도루 엄살쿤 보유 리그 AIDORU</p></hr>
 							<h1>#Link</h1>
                             <h2>Discord</h2>
 							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
