roll-back to last revision
'23 06.06 roll-back to last revision
- discard ALL f.n symbols
- restored root index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-
-<!--
 <head>
 	<title>DizBorD | Main</title>
 	<meta charset="utf-8" />
@@ -29,19 +27,19 @@
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 	<body class="is-preload">
-		>!-- Wrapper --<
+		<!-- Wrapper -->
 			<div id="wrapper">
 
-				>!-- Header --<
+				<!-- Header -->
 					<header id="header">
 						<div class="inner">
 
-							>!-- Logo --<
+							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">KnMango*</span>
 								</a>
 
-							>!-- Nav --<
+							<!-- Nav -->
 								<nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
@@ -50,7 +48,7 @@
 						</div>
 					</header>
 
-				>!-- Menu --<
+				<!-- Menu -->
 					<nav id="menu">
 						<h2>MENU</h2>
                         <ul>
@@ -63,7 +61,7 @@
                         </ul>
 					</nav>
 
-				>!-- Main --<
+				<!-- Main -->
 					<div id="main">
 						<div class="inner">
                             <header>
@@ -147,7 +145,7 @@
 						</div>
 					</div>
 
-				>!-- Footer --<
+				<!-- Footer -->
                     <footer id="footer">
                         <div class="inner">
                             <section>
@@ -173,7 +171,7 @@
 
 			</div>
 
-		>!-- Scripts --<
+		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
@@ -181,6 +179,4 @@
 			<script src="assets/js/main.js"></script>
 			<script data-ad-client="ca-pub-3776759331501824" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		</body>
-	-->
-	ANG?
 	</html>
