--- a/aboutme.html
+++ b/aboutme.html
@@ -69,8 +69,8 @@
 							<h1>#About Blog Owner</h1>
                             <h2>KnMango* - Minkyo Choi</h2>
 							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
-							<p><del>평범한 고등학교 2학년생입니다. IT관련, 음악, 음향, 전자기기를 좋아합니다.</del><br />
-								이젠 3학년생입니다.</p><br />
+							<p><del>평범한 고등학교 2학년생입니다.</del> 육체노동, 음악, 음향, 전자기기를 좋아합니다.<br />
+								지금은 군바리입니다.</p><br />
 						</div>
 					</div>
 
@@ -81,7 +81,6 @@
 								<h2>Developer</h2>
                                 <ul>
                                     <li>KnMango</li>
-                                    <li>Kong_White (Sub Developer)</li>
                                 </ul>
 							</section>
 							<section>
