--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>DizBorD | Main</title>
+	<title>Cat Grass | Main</title>
 	<meta charset="utf-8" />
-	<meta name="description" content="DizBorD는 샌즈를 신격화하여 받드는 곳이다..ㄹㅇㅋㅋ">
+	<meta name="description" content="wow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -36,7 +36,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">KnMango*</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">CMK</span>
 								</a>
 
 							<!-- Nav -->
@@ -65,9 +65,9 @@
 					<div id="main">
 						<div class="inner">
                             <header>
-                                <h1>KnMango의 DizBorD에 오신 것을 환영합니다!</h1><br />
-                                <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChating Profile.</a><br />
-								<del>사실 사이트라 하기엔 아직 미완성인데</del></p>
+                                <h1>Chii's Cat Grass에 오신 것을 환영합니다!</h1><br />
+                                <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChat Profile.</a><br />
+								<del>여기는 언제 제대로 활용해볼까</del></p>
                             </header>
 							<section class="tiles">
 								<article class="style2">	
@@ -77,7 +77,7 @@
 									<a href="aboutme.html">
 										<h2>Owner</h2>
 										<div class="content">
-											<p>주인장의 신상을 털고싶으시다면?<br />클릭 시 About Me 페이지로 이동합니다.</p>
+											<p>제 신상을 털고싶으시다면?<br />클릭 시 About Me 페이지로 이동합니다.</p>
 										</div>
 									</a>
 								</article>
@@ -86,7 +86,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a>
-										<h2>DizBorD?</h2>
+										<h2>About this page</h2>
 										<div class="content">
 											<p>심심해서 만들어 본 페이지입니다.<br />
                                             현재 지인들을 위한 컨텐츠 제공 용도로<br />
@@ -99,10 +99,10 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a>
-										<h2>Goh-Sam</h2>
+										<h2>ROKA</h2>
 										<div class="content">
-											<p>그렇습니다... 사실 고3입니다.<br />
-											<del>졸업마렵다</del></p>
+											<p>대한민국 육군<br />
+											22.08.22 ~ 24.02.21</p>
 										</div>
 									</a>
 								</article>
@@ -124,7 +124,9 @@
 									<a>
 										<h2>Server</h2>
 										<div class="content">
-											<p>FTP서버, L2TP (일본, 한국)<>VPN 서버 운영 중입니다.</p>
+											<p>Minecraft Bedrok Server와<br />
+											일본 IPSec VPN을<br />
+											한정적으로 제공하고 있습니다.</p>
 										</div>
 									</a>
 								</article>
@@ -135,8 +137,10 @@
 									<a>
 										<h2>Workspace</h2>
 										<div class="content">
-											<p>Macbook Pro 13'' 2020<br />
-											(Apple Silicon M1)</p>
+											<p>Mac Mini 2018 (Core i7)<br />
+												Macbook Pro 13'' 2020<br />
+											(Apple Silicon M1)
+											</p>
 										</div>
 									
 									</a>
@@ -152,7 +156,6 @@
                                 <h2>Developer</h2>
                                 <ul>
                                     <li><a href="scarchive.html">KnMango</a></li>
-                                    <li>Kong_White (Sub Developer)</li>
                                 </ul>
                             </section>
                             <section>
