--- a/aboutme.html
+++ b/aboutme.html
@@ -56,17 +56,15 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="aboutme.html">About Me</a></li>
-                            <li><a href="project.html">Project</a></li>
                             <li><a href="download.html">Download</a></li>
-                            <li><a href="sourceshare.html">Source Share</a></li>
-                            <li><a href="outlink.html">Out-Link</a></li>
+							<li><a href="https://blog.naver.com/eunho0815">Naver Blog</a></li>
                         </ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>#About Blog Owner</h1>
+							<h1>#About Me</h1>
                             <h2>KnMango* - Minkyo Choi</h2>
 							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
 							<p>평범한 대학생입니다. 주 전공은 음향이며, 프로그래밍 및 기타 잡다한 것들을 공부하고 있습니다.<br />
