--- a/download.html
+++ b/download.html
@@ -50,16 +50,15 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="aboutme.html">About Me</a></li>
-                            <li><a href="project.html">Project</a></li>
-                            <li><a href="download.html">Download</a></li>
-                            <li><a href="sourceshare.html">Source Share</a></li>
-                            <li><a href="outlink">Out-Link</a></li>
-                        </ul>
+				<nav id="menu">
+					<h2>Menu</h2>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="aboutme.html">About Me</a></li>
+						<li><a href="download.html">Download</a></li>
+						<li><a href="https://blog.naver.com/eunho0815">Naver Blog</a></li>
+					</ul>
+				</nav>
 					</nav>
 
 				<!-- Main -->
@@ -69,37 +68,35 @@
 
 							<!-- Text -->
 								<section>
-									<p>KnMango 또는 Disboard 구성원이 자주 쓰는 소프트웨어나, 기타 잡다한 것들을 다운로드할 수 있습니다.</ br>
-                                       저작권 라이센스를 준수하므로 2차 배포는 하지 않습니다.<del>하지만 불과 몇 줄 아래를 보면</del></p>
+									<p>KnMango가 자주 사용하는 소프트웨어, 에셋 , 기타 잡다한 것들을 다운로드할 수 있습니다.<br />
+                                    <del></del></p>
 									<hr />
                                 </section>
 							<!-- Lists -->
 								<section>
-									<h1>LIST</h1>
+									<h1>> LIST</h1>
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
-											<h3>Available</h3>
+											<h3>General</h3>
 											<ul class="alt">
-											<li>-</li>
+											<li><a href="https://drive.google.com/drive/folders/1ZdillT4EV1Z33CYzMXGvEliBAHNhsEQ_?usp=share_link">Unity assets</a></li>
 											</ul>
-                                            <h3>Archive - Public</h3>
+                                            <h3>Developer</h3>
                                             <ul class="alt">
-                                                <li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">러브라이브! 시리즈 음원 아카이브</a></li>
-                                                <li><a href="https://drive.google.com/open?id=16PVZ08TFavxzunV_kiLPsehvfw40DxPE">러브라이브! 영상 아카이브</a></li>
-                                                <li><a href="https://drive.google.com/open?id=16te0VV7Et_mBdNl3LQSrFVFmVR54NMDa">러브라이브! 선샤인! 영상 아카이브</a></li>
-												<li><a href="llss_mv.html">러브라이브! 선샤인! 극장판 스트림(720p)</a></li>
-												<li><a href="https://drive.google.com/drive/folders/1q2AngZhT2vh8VLCPp7eCqIm9pfhNXGVN?usp=sharing">스트라이크 더 블러드 NCOP/ED</a></li>
+                                                <li><a href="https://bootstrap.pypa.io/get-pip.py">get-pip.py</a></li>
+                                                <li><a href="https://knmango.github.io/barsion_bot.py">Discord Bot 기초 골조</a></li>
+                                                <li><a href="https://knmango.github.io/plz-iwannago-home">집에가고싶다</a></li>
                                             </ul>
-                                            <h3>Archive - Private</h3>
+                                            <h3>Archive</h3>
                                             <ul class="alt">
-                                                <li><a href="https://drive.google.com/file/d/1LLgMsOGk64-GSdOISkWCsHX5FD09UqLB/view?usp=sharing">Knots Way</a></li>
-                                                <li><a href="https://drive.google.com/drive/folders/1lo4e9MySJiRNLLypK6wAPEjWuziwMLcC?usp=sharing">PRIMROSE FLOWER VOICE</a></li>
+                                                <li><a href="https://drive.google.com/drive/folders/1ZDkceXECeJt_LLDATmK80R8HgDz_TorU?usp=share_link">Soulworker Unpacked</a></li>
+                                                <li><a href="https://drive.google.com/drive/folders/0By_RZlfiit-yWTN1RUJseEVpaXM?resourcekey=0-pS8CLFImjjcxhsZKEH2O8w&usp=share_link">Undertale MIDI</a></li>
 											</ul>
-											<h3>Archive - Beta Content(Use Own Server)</h3>
+											<h3>5taku(wip)</h3>
 											<ul class="alt">
-												<li><a href="archive/music.html">Anime Song Archive(Beta)</a></li>
-												<li><a href="">Anime Video Archive(Beta)</a></li>
-												<li><a href="">Utaite Song Archive(Beta)</a></li>
+												<li><a href=""></a></li>
+												<li><a href=""></a></li>
+												<li><a href=""></a></li>
 											</ul>
 										</div>
 								</section>
