--- a/index.html
+++ b/index.html
@@ -49,17 +49,15 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<h2>MENU</h2>
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="aboutme.html">About Me</a></li>
-                            <li><a href="project.html">Project</a></li>
-                            <li><a href="download.html">Download</a></li>
-                            <li><a href="sourceshare.html">Source Share</a></li>
-                            <li><a href="server.html">Server Stat(beta)</a></li>
-                        </ul>
-					</nav>
+				<nav id="menu">
+					<h2>Menu</h2>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="aboutme.html">About Me</a></li>
+						<li><a href="download.html">Download</a></li>
+						<li><a href="https://blog.naver.com/eunho0815">Naver Blog</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main">
