--- a/download.html
+++ b/download.html
@@ -74,7 +74,7 @@
                                 </section>
 							<!-- Lists -->
 								<section>
-									<h1>> LIST</h1>
+									<h1>#LIST</h1>
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
 											<h3>General</h3>
