--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<div class="inner">
                             <header>
                                 <h1>Chii's Cat Grass에 오신 것을 환영합니다!</h1><br />
-                                <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChat Profile.</a><br />
+                                <p>Contact Me(Discord ID): <a href="">0dBFS</a><br />
 								<del>여기는 언제 제대로 활용해볼까</del></p>
                             </header>
 							<section class="tiles">
